# redactor-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  manifest.json  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: aws-credential-reviewer.md
.claude/skills/pack-mcp/: SKILL.md
.claude/skills/start-mcp/: SKILL.md
.claude/skills/test-mcp/: SKILL.md
.claude/skills/version/: SKILL.md
.github/: dependabot.yaml
.github/workflows/: build.yaml  release.yaml
docs/: claude-automation-recommendations.md
docs/samples/: sample-001.md  sample-002.csv  sample-003-spanish.txt  sample-004-french.txt
src/: comprehend.ts  index.ts  types.ts  utils.ts
src/redactor_mcp/: __main__.py  comprehend.py  redact_pii_guide.md  server.py
